tests/neg/i13815/Test_2.scala
val box = Box.fromProduct((1, "a"))  // error
val circleOrdinal = Shape.ordinal(Shape.Circle(r = 23)) // error